# chat-pdf

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  pdf.py
backend/app/db/: models.py  mongo_config.py
backend/app/schemas/: chat.py  pdf.py  users.py
backend/app/services/: embedding_service.py  pdf_service.py  qa_service.py  user_service.py
backend/app/utils/: jwt_handler.py  pdf_txt_extractor.py  splitter.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: ChatHistory.tsx  ChatWindow.tsx  NewChatModal.tsx  ProtectedRoute.tsx  SessionTimeoutModal.tsx
frontend/src/pages/: Home.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Signup.tsx  Uploads.tsx
